# ronergate

./: .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
ronergate/: bot.py  config.py  db.py  errors.py  permissions.py
ronergate/cogs/girldle/: README.md  __init__.py  analysis.py  cog.py  ingest.py  migrate.py  parser.py  rating.py  schema.sql
ronergate/cogs/girldle_admin/: README.md  __init__.py  cog.py
tests/: test_multi_tenant.py  test_parser.py  test_rating.py
