[project]
name = "ronergate"
version = "0.1.0"
description = "General-purpose Discord bot for the Antistratégie server"
requires-python = ">=3.14"
dependencies = [
    "discord.py>=2.7",
    "python-dotenv>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]

[project.scripts]
ronergate = "ronergate.bot:main"

[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ronergate"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
